[tool.poetry]
name = "cashdrizzle"
version = "0.1.0"
description = ""
authors = ["Kauri Kolehmainen <kaurikolehmainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "2.5.1"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
